[gd_scene load_steps=4 format=3 uid="uid://7qrebi2gqtno"]

[ext_resource type="Script" path="res://main.gd" id="1_rj0nf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gjiah"]
albedo_color = Color(0.380392, 0.639216, 0.317647, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_o0b61"]
size = Vector2(32, 32)

[node name="Main" type="Node3D"]
script = ExtResource("1_rj0nf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866026, -0.5, 0.75, -0.433013, 0, 15, 0)
shadow_enabled = true
directional_shadow_max_distance = 250.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 16, 16)

[node name="Floor" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_gjiah")
mesh = SubResource("PlaneMesh_o0b61")

[node name="NetworkInfo" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.0
offset_right = 58.0
offset_bottom = 56.0
grow_horizontal = 2

[node name="NetworkSideDisplay" type="Label" parent="NetworkInfo"]
offset_right = 116.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Network Side"
horizontal_alignment = 1

[node name="UniquePeerID" type="Label" parent="NetworkInfo"]
offset_top = 30.0
offset_right = 116.0
offset_bottom = 56.0
grow_horizontal = 2
text = "Unique Peer ID"
horizontal_alignment = 1

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -33.0
offset_right = 39.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="Menu"]
offset_right = 79.0
offset_bottom = 31.0
text = "Host"

[node name="Join" type="Button" parent="Menu"]
offset_top = 35.0
offset_right = 79.0
offset_bottom = 66.0
text = "Join"

[node name="MessageInput" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -32.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="MessageInput" to="." method="_on_message_input_text_submitted"]
